syntax = "proto3";

option go_package = "github.com/noxflow-server/pkg/server";

package monitoring;

message ContainerLogMetadata {
    string container_id = 1;
    string container_name = 2;
    string image = 3;
    string state = 4;
    string log_path = 5;
    string log_driver = 6;
}

message LogData {
    ContainerLogMetadata metadata = 1;
    string log = 2;
}

message ContainerUsageStats {
    string container_id = 1;
    int64 timestamp = 2; 
    double cpu_percent = 3;
    uint64 cpu_usage = 4;      
    uint64 system_cpu_usage = 5;
    uint64 memory_usage = 6;    
    uint64 memory_limit = 7;    
    double memory_percent = 8; 
    uint64 memory_cache = 9;   
}


service LogStreamingService {
    rpc StreamLogs(stream LogData) returns (stream LogResponse);
}


service UsageStreamingService {
    rpc StreamUsage(stream ContainerUsageStats) returns (stream UsageResponse);
}


message LogResponse {
    string message = 1; 
}


message UsageResponse {
    string message = 1; 
}